feat(navbar): finishing the navbar

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,1 +1,14 @@
-<p>navbar works!</p>
+<div class="" dir="rtl">
+  <p-menubar [model]="items">
+    <ng-template pTemplate="end">
+      <div class="md:border-solid border-gray-200 p-1 border-round-2xl align-items-center flex gap-3 w-max">
+        <p-avatar image="https://s3-alpha-sig.figma.com/img/7d65/f26d/e0863816901dd5d096a66cc5cc09af86?Expires=1693180800&Signature=BONaMXu3JW4rTLU7g1ED~rfeHuNgK26pYtmFedtaqhvrv47B0IlKUPnIrvFb~NWWeS-8nMm5PKzpr3YWYwK0dXCi4ImoA8AO0rd3DR8QE2xdhMtHUMwv6TB~iFA2V4hqudrGFtXN9OZmqkAbF0Mx9RvnZuVF2ZQTJXo6whYDvgy3x1LousYEmYRUVFiicQr4lf1gVE1eNzOw1OC78WcICXjHndp~z5Zptae0sgVp4H8VKc21YSlMTytyCrTgnls3OBG4dwi9x8qhLS851opsOCiTzngq8A96j0qwfWaMOUFZw~vD1MRlEwztGAR8PGpS~njhOdDSCmCDSGmk0juNww__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4" shape="square"
+                  styleClass="mr-2"></p-avatar>
+        <div class="flex flex-column">
+          <span class="p-d-block">أهلا 😍</span>
+          <span class=" p-d-block">{{"محمد زكي"}}</span>
+        </div>
+      </div>
+    </ng-template>
+  </p-menubar>
+</div>
