--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,10 +1,10 @@
-.angry-grid {
+.grid-container {
   display: grid;
 
   grid-template-rows: repeat(30, 1fr);
   grid-template-columns: repeat(12, 1fr);
 
-  gap: 0px;
+  gap: 0;
   height: 100%;
 
 }
