--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
-/* You can add global styles to this file, and also import other style files */
+@import "primeng/resources/themes/lara-light-blue/theme.css";
+@import "primeng/resources/primeng.css";
 
 
 * {
@@ -9,5 +10,5 @@
 }
 
 body {
-  background: #f5f5f5;
+  font-family: var(--font-family);
 }
