feat(day entries): Finishing the day entries for working hours

--- a/src/app/components/options/options.component.html
+++ b/src/app/components/options/options.component.html
@@ -1,1 +1,41 @@
-<p>options works!</p>
+<div class="" dir="rtl">
+  <p-menubar>
+
+    <ng-template pTemplate="start">
+      <div class=" p-1 align-items-center flex gap-3 w-max">
+
+        <div class="back">
+          <i class="pi text-blue-900 cursor-pointer font-bold pi-arrow-right"></i>
+        </div>
+
+        <div class="title">
+          <h1 class="text-blue-900 sm:font-semibold font-bold">إضافة موارد جديدة</h1>
+      </div>
+      </div>
+    </ng-template>
+
+    <ng-template pTemplate="end">
+      <div class="p-1 align-items-center flex gap-3 w-max">
+
+
+        <div class="edit-resource">
+          <i class="pi text-blue-500 pi-pencil"></i>
+          حفظ التغييرات
+
+        </div>
+
+        <div class="add-resource">
+          <i class="pi text-green-500 pi-plus"></i>
+          إضافة مورد
+        </div>
+
+        <div class="delete-resource">
+          <i class="pi text-red-500 pi-trash"></i>
+          حذف المورد
+        </div>
+
+
+      </div>
+    </ng-template>
+  </p-menubar>
+</div>
